# adapter/restapi/endpoints/operations/group/invite_user_to_group_parameters.go
@@ -6,12 +6,18 @@ package group
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"context"
+	"io"
 	"net/http"
 
 	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	"mnimidamonbackend/adapter/restapi/modelapi"
 )
 
 // NewInviteUserToGroupParams creates a new InviteUserToGroupParams object
@@ -31,6 +37,11 @@ type InviteUserToGroupParams struct {
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
+	/*Payload to invite a user
+	  Required: true
+	  In: body
+	*/
+	Body *modelapi.InviteUserPayload
 	/*Numeric ID of the Group.
 	  Required: true
 	  In: path
@@ -46,6 +57,34 @@ func (o *InviteUserToGroupParams) BindRequest(r *http.Request, route *middleware
 	var res []error
 
 	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body modelapi.InviteUserPayload
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(context.Background())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
 
 	rGroupID, rhkGroupID, _ := route.Params.GetOK("group_id")
 	if err := o.bindGroupID(rGroupID, rhkGroupID, route.Formats); err != nil {
