# adapter/restapi/modelapi/invite.go
@@ -19,28 +19,20 @@ import (
 // swagger:model Invite
 type Invite struct {
 
-	// If it's accepted.
-	// Example: false
-	Accepted bool `json:"accepted,omitempty"`
-
 	// The invitation date.
 	// Format: date
 	Date strfmt.Date `json:"date,omitempty"`
 
-	// Numeric identificator of the Group the user is invited to.
-	// Example: 42
-	// Read Only: true
-	GroupID int64 `json:"group_id,omitempty"`
+	// group
+	Group *Group `json:"group,omitempty"`
 
 	// Numeric identificator of the Invite.
 	// Example: 42
 	// Read Only: true
 	InviteID int64 `json:"invite_id,omitempty"`
 
-	// Numeric identificator of the invited User.
-	// Example: 42
-	// Read Only: true
-	UserID int64 `json:"user_id,omitempty"`
+	// user
+	User *User `json:"user,omitempty"`
 }
 
 // Validate validates this invite
@@ -48,6 +40,14 @@ func (m *Invite) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	if err := m.validateDate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateGroup(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUser(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -69,11 +69,45 @@ func (m *Invite) validateDate(formats strfmt.Registry) error {
 	return nil
 }
 
+func (m *Invite) validateGroup(formats strfmt.Registry) error {
+	if swag.IsZero(m.Group) { // not required
+		return nil
+	}
+
+	if m.Group != nil {
+		if err := m.Group.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("group")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *Invite) validateUser(formats strfmt.Registry) error {
+	if swag.IsZero(m.User) { // not required
+		return nil
+	}
+
+	if m.User != nil {
+		if err := m.User.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("user")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
 // ContextValidate validate this invite based on the context it is used
 func (m *Invite) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.contextValidateGroupID(ctx, formats); err != nil {
+	if err := m.contextValidateGroup(ctx, formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -81,7 +115,7 @@ func (m *Invite) ContextValidate(ctx context.Context, formats strfmt.Registry) e
 		res = append(res, err)
 	}
 
-	if err := m.contextValidateUserID(ctx, formats); err != nil {
+	if err := m.contextValidateUser(ctx, formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -91,10 +125,15 @@ func (m *Invite) ContextValidate(ctx context.Context, formats strfmt.Registry) e
 	return nil
 }
 
-func (m *Invite) contextValidateGroupID(ctx context.Context, formats strfmt.Registry) error {
+func (m *Invite) contextValidateGroup(ctx context.Context, formats strfmt.Registry) error {
 
-	if err := validate.ReadOnly(ctx, "group_id", "body", int64(m.GroupID)); err != nil {
-		return err
+	if m.Group != nil {
+		if err := m.Group.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("group")
+			}
+			return err
+		}
 	}
 
 	return nil
@@ -109,10 +148,15 @@ func (m *Invite) contextValidateInviteID(ctx context.Context, formats strfmt.Reg
 	return nil
 }
 
-func (m *Invite) contextValidateUserID(ctx context.Context, formats strfmt.Registry) error {
+func (m *Invite) contextValidateUser(ctx context.Context, formats strfmt.Registry) error {
 
-	if err := validate.ReadOnly(ctx, "user_id", "body", int64(m.UserID)); err != nil {
-		return err
+	if m.User != nil {
+		if err := m.User.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("user")
+			}
+			return err
+		}
 	}
 
 	return nil
